--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="sample.css">
+<link rel="stylesheet" href="css/index.css">
 <div class="parent">
   <div class="inner">
     <div class="tablecell">
