--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <link rel="stylesheet" href="css/index.css">
 <div class="parent">
-  <div class="inner">
-    <div class="tablecell">
-      <h2>Hakase Information</h2>
-    </div>
-  </div>
+  <div class="item"><h2>Hakase Information</h2></div>
 </div>
