--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="css/index.css">
 <div class="parent">
-  <div class="item"><h2>Hakase Information</h2></div>
+	<div class="item">ブロック要素</div>
+	<div class="item big">ブロック要素</div>
+	<div class="item">ブロック要素</div>
 </div>
