--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="css/index.css">
 <div class="parent">
 	<div class="item">ブロック要素</div>
 	<div class="item big">ブロック要素</div>
