--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<link rel="stylesheet" href="css/index.css">
-<div class="parent">
-	<div class="item">ブロック要素</div>
-	<div class="item big">ブロック要素</div>
-	<div class="item">ブロック要素</div>
-</div>
+<body bgcolor="#feffe8">
+	<h1>&nbsp;</h1>
+	<h1>&nbsp;</h1>
+	<h1>&nbsp;</h1>
+	<h1>&nbsp;</h1>
+
+<h2 style="text-align:center">Hakase Information</h2>
+<h1 style="text-align:center">(このサイトはPCにしか対応していません)</h1>
