--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<h1>&nbsp;</h1>
 	<h1>&nbsp;</h1>
 	<h1>&nbsp;</h1>
-	<h1>&nbsp;</h1>
+	<h3>&nbsp;</h3>
 
-<h2 style="text-align:center">Hakase Information</h2>
-<h1 style="text-align:center">(このサイトはPCにしか対応していません)</h1>
+<h1 style="text-align:center">Hakase Information</h1>
+<p style="text-align:center">(このサイトはPCにしか対応していません)</p>
