--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <body bgcolor="#feffe8">
 	<h1>&nbsp;</h1>
 	<h1>&nbsp;</h1>
-	<h1>&nbsp;</h1>
-	<h3>&nbsp;</h3>
+	<h2>&nbsp;</h2>
+	<h4>&nbsp;</h4>
 
 <h1 style="text-align:center">Hakase Information</h1>
+<h3 style="text-align:center"><a href="https://HakaseService.github.io">Hakase Service</a></h3>	
 <p style="text-align:center">(このサイトはPCにしか対応していません)</p>
