--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Hakase Information</title>
-<body bgcolor="#feffe8">
+<body bgcolor="#797979" text="#ffffff">
 	<h1>&nbsp;</h1>
 	<h1>&nbsp;</h1>
 	<h2>&nbsp;</h2>
